syntax = "proto3";

package vault;

service Vault {
    rpc Tokenize(TokenizeRequest) returns (TokenizeResponse);
    rpc Detokenize(DetokenizeRequest) returns (DetokenizeResponse);
}

message TokenizeRequest {
    string value = 1;
    string field = 2;
}

message TokenizeResponse {
    string tokenized_value = 1;
    string tokenized_field = 2;
}

message DetokenizeRequest {
    string value = 1;
    string field = 2;
}

message DetokenizeResponse {
    string detokenized_value = 1;
    string detokenized_field = 2;
}
